# recording-interval-cgm

./: .gitignore  LICENSE  README.md  pyproject.toml
code/: 1_create_df.ipynb  2_calculate_metrics.ipynb  3_compare_all_metrics.ipynb  4_identifying_glycemic_events.ipynb  5_introducing_tns.ipynb  calc_episodes.py
